force-app/main/default/objects/MZ_Coordinate__c/MZ_Coordinate__c.object-meta.xml
<CustomObject>
    <label>コーデ</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>コーデID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>コーデ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>