force-app/main/default/objects/MZ_Coordinate__c/fields/MZ_CoordinateScore__c.field-meta.xml
<CustomField>
    <fullName>MZ_CoordinateScore__c</fullName>
    <label>コーデスコア</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>