force-app/main/default/objects/MZ_Coordinate__c/fields/MZ_Inner__c.field-meta.xml
<CustomField>
    <fullName>MZ_Inner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>インナー</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MZ_Item__c.MZ_SubCategory__c</field>
            <operation>equals</operation>
            <value>チュニック, シャツ・ブラウス, ポロシャツ, Tシャツ・カットソー, タンクトップ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MZ_Item__c</referenceTo>
    <relationshipLabel>コーデ (インナー)</relationshipLabel>
    <relationshipName>MZ_Coordinates_Inner</relationshipName>
    <type>Lookup</type>
</CustomField>