force-app/main/default/objects/MZ_Coordinate__c/fields/MZ_Outer__c.field-meta.xml
<CustomField>
    <fullName>MZ_Outer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>アウター</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MZ_Item__c.MZ_Category__c</field>
            <operation>equals</operation>
            <value>アウター</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MZ_Item__c</referenceTo>
    <relationshipLabel>コーデ（アウター）</relationshipLabel>
    <relationshipName>MZ_Coordinates_Outer</relationshipName>
    <type>Lookup</type>
</CustomField>