force-app/main/default/objects/MZ_Coordinate__c/fields/MZ_Season__c.field-meta.xml
<CustomField>
    <fullName>MZ_Season__c</fullName>
    <label>シーズン</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MZ_Season</valueSetName>
    </valueSet>
</CustomField>