force-app/main/default/objects/MZ_Coordinate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MZ_Outer__c</columns>
    <columns>MZ_Tops__c</columns>
    <columns>MZ_Inner__c</columns>
    <columns>MZ_Bottoms__c</columns>
    <columns>MZ_Shoes__c</columns>
    <columns>MZ_CoordinateScore__c</columns>
    <columns>MZ_Season__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>